--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 dependencies {
 
@@ -204,6 +207,7 @@ dependencies {
     implementation 'com.larswerkman:HoloColorPicker:1.4'
     implementation 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     implementation 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+    implementation 'com.google.android.material:material:1.3.0'
 
     // Flavors specific dependencies
     playImplementation 'io.nlopez.smartlocation:library:3.2.4'
