--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/IlibellusTheme.ApiSpec.Branded"
+        android:theme="@style/Theme.Ilibellus.ApiSpec.Branded"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_content_rules"
         tools:replace="android:theme"
@@ -53,7 +53,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -104,7 +105,7 @@
         <activity
             android:name=".GalleryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/OmniNotesFullscreenTheme.ApiSpec" />
+            android:theme="@style/Theme.Ilibellus.ApiSpec" />
 
         <activity
             android:name=".CategoryActivity"
@@ -130,7 +131,7 @@
         <!-- Password -->
         <activity
             android:name=".PasswordActivity"
-            android:theme="@style/IlibellusTheme.ApiSpec.Dialog"
+            android:theme="@style/Theme.Ilibellus.ApiSpec.Dialog"
             android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <!-- Info -->
@@ -151,7 +152,7 @@
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:noHistory="true"
-            android:theme="@style/IlibellusTheme.NoDisplay" />
+            android:theme="@style/Theme.Ilibellus.NoDisplay" />
 
         <!-- Home launcher shortcut -->
         <activity
